--- a/OruBloggen/Views/ProfilePage/ShowInfo.cshtml
+++ b/OruBloggen/Views/ProfilePage/ShowInfo.cshtml
@@ -12,11 +12,10 @@
     </div>
     <br />
 
-    if (Model.userId != Model.FollowedID)
+    if (Model.userId != Model.OtherUserID)
     {
         if (Model.UserIsFollowed == "")
         {
-
             <input type="button" class="followBtn" value="Följ" onclick="location.href = '@Url.Action("FollowUser", "Following", new { followID = Model.FollowedID })'" />
         }
         else
@@ -85,69 +84,153 @@
 {
 
     <div class="myMeetings" style="float:right; height:500px; width:80%;">
-        <h2>Dina möten</h2>
 
-        <p>
-            @Html.ActionLink("Skapa nytt möte", "Meeting", "Meeting")
-        </p>
-        <table class="table">
-            <tr>
-                <th>
-                    @Html.DisplayName("Titel")
-                </th>
-                <th>
-                    @Html.DisplayName("Beskrivning")
-                </th>
-                <th>
-                    @Html.DisplayName("Startdatum")
-                </th>
-                <th>
-                    @Html.DisplayName("Slutdatum")
-                </th>
-            </tr>
+       
+            <h3>Mötesförfrågningar</h3>
 
-            @foreach (var item in Model.UserMeetings)
-            {
+            <p>
+                @Html.ActionLink("Skapa nytt möte", "Meeting", "Meeting")
+            </p>
+            <table class="table">
                 <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.MeetingModel.MeetingTitle)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.MeetingModel.MeetingDesc)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.MeetingModel.MeetingStartDate)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.MeetingModel.MeetingEndDate)
-                    </td>
-                    <td>
-                        @if (item.MeetingModel.MeetingActive)
-                        {
-                            if (DateTime.Now > item.MeetingModel.MeetingStartDate && DateTime.Now < item.MeetingModel.MeetingEndDate)
+                    <th>
+                        @Html.DisplayName("Titel")
+                    </th>
+                    <th>
+                        @Html.DisplayName("Beskrivning")
+                    </th>
+                    <th>
+                        @Html.DisplayName("Startdatum")
+                    </th>
+                    <th>
+                        @Html.DisplayName("Slutdatum")
+                    </th>
+                </tr>
+
+                @foreach (var item in Model.UserMeetings)
+                {
+
+                    if (item.MeetingModel.MeetingActive)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.MeetingModel.MeetingTitle)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.MeetingModel.MeetingDesc)
+                            </td>
+                            <td>
+                                @Html.ValueFor(modelItem => item.MeetingModel.MeetingStartDate, "{0:yyyy-MM-dd HH:mm}")
+                            </td>
+                            <td>
+                                @Html.ValueFor(modelItem => item.MeetingModel.MeetingEndDate, "{0:yyyy-MM-dd HH:mm}")
+                            </td>
+                            <td>
+                                @if (item.MeetingModel.MeetingActive)
+                                {
+                                    if (DateTime.Now > item.MeetingModel.MeetingStartDate && DateTime.Now < item.MeetingModel.MeetingEndDate)
+                                    {
+                                        @Html.DisplayName("Pågående")
+                                    }
+                                    else
+                                    {
+                                        @Html.DisplayName("Kommande")
+                                    }
+                                }
+                                else
+                                {
+                                    @Html.DisplayName("Avslutat/Inställt")
+                                }
+                            </td>
+                            <td>
+
+
+                                @if (Model.userId == User.Identity.GetUserId())
+                                {
+                                if (item.AcceptedInvite)
+                                {
+                                    @Html.ActionLink("'", "AcceptMeeting", new { meetingId = item.MeetingModel.MeetingID });
+                                }
+                                else
+                                {
+                                    @Html.ActionLink("Acceptera", "AcceptMeeting", new { meetingId = item.MeetingModel.MeetingID });
+
+                                }
+                                }
+                            </td>
+                        </tr>
+                    }
+                
+                 }
+
+            </table>
+
+            <h3>Kommande möten</h3>
+
+            <table class="table">
+                <tr>
+                    <th>
+                        @Html.DisplayName("Titel")
+                    </th>
+                    <th>
+                        @Html.DisplayName("Beskrivning")
+                    </th>
+                    <th>
+                        @Html.DisplayName("Startdatum")
+                    </th>
+                    <th>
+                        @Html.DisplayName("Slutdatum")
+                    </th>
+                </tr>
+
+                @foreach (var item in Model.MeetingModels)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(model => item.MeetingTitle)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.MeetingDesc)
+                        </td>
+                        <td>
+                            @Html.ValueFor(modelItem => item.MeetingStartDate, "{0:yyyy-MM-dd HH:mm}")
+
+                        </td>
+                        <td>
+                            @Html.ValueFor(modelItem => item.MeetingEndDate, "{0:yyyy-MM-dd HH:mm}")
+                        </td>
+                        <td>
+
+                            @if (item.MeetingActive)
                             {
-                                @Html.DisplayName("Pågående")
-                            }
-                            else
-                            {
-                                @Html.DisplayName("Kommande")
+                                if (DateTime.Now > item.MeetingStartDate && DateTime.Now < item.MeetingEndDate)
+                                {
+                                    @Html.DisplayName("Pågående")
+                                }
+                                else
+                                {
+                                    @Html.DisplayName("Kommande")
+                                <td>
+                                    @if (item.MeetingUserID == User.Identity.GetUserId())
+                                    {
+
+                                        @Html.ActionLink("Ställ in möte", "CancelMeeting", new { meetingId = item.MeetingID, title = item.MeetingTitle, startDate = item.MeetingStartDate })
+
+                                    }
+                                </td>
                             }
                         }
                         else
                         {
                             @Html.DisplayName("Avslutat/Inställt")
                         }
-                    </td>
-                    <td>
-                        @Html.ActionLink("Ställ in möte", "CancelMeeting",
-                             new { meetingId = item.MeetingID, title = item.MeetingModel.MeetingTitle, startDate = item.MeetingModel.MeetingStartDate })
-                    </td>
-                </tr>
-            }
 
-        </table>
 
-    </div>
+                        </tr>
+                    }
+
+            </table>
+        </div>
 }
 
 
